New Comment added only button

--- a/index1.html
+++ b/index1.html
@@ -9,6 +9,6 @@
 <body>
     <h1>This is Git & Github</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, reiciendis atque impedit vel rerum tempora similique itaque molestias deleniti iusto.</p>
-    <p>this is the new feature</p>
+    <p>this is the new feature(button)</p>
 </body>
 </html>
